--- a/system_sensors.service
+++ b/system_sensors.service
@@ -3,9 +3,9 @@ Description=System Sensor service
 After=multi-user.target
 
 [Service]
-User=pi
+User=restlessmodem
 Type=idle
-ExecStart=/usr/bin/python3 /home/pi/system_sensors/src/system_sensors.py /home/pi/system_sensors/src/settings.yaml
+ExecStart=/usr/bin/python3 /home/restlessmodem/Development/system_sensors/src/system_sensors.py /home/restlessmodem/Development/system_sensors/src/settings.yaml
 
 [Install]
 WantedBy=multi-user.target
